first push sb4rd

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </span><span style="color:#1f3751">S</span><span style="color:#d97b2d">ervice</span>
 	</span><span style="color:#1f3751">B</span><span style="color:#d97b2d">undle</span>
 	for
-	</span><span style="color:#1f3751">E</span><span style="color:#d97b2d"><pidemic/span>
+	</span><span style="color:#1f3751">E</span><span style="color:#d97b2d">pidemic</span>
         </span><span style="color:#1f3751">R</span><span style="color:#d97b2d">esponse</span> 
         </i>
         </div/div><br>
