first push sb4rd

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 	<div class='biofold' >
 	<i>
         </span><span style="color:#1f3751">S</span><span style="color:#d97b2d">ervice</span>
-	</span><span style="color:#1f3751">B</span><span style="color:#d97b2d">undle</span>
-	for
+	</span><span style="color:#1f3751">B</span><span style="color:#d97b2d">undle
+	for</span>
 	</span><span style="color:#1f3751">E</span><span style="color:#d97b2d">pidemic</span>
         </span><span style="color:#1f3751">R</span><span style="color:#d97b2d">esponse</span> 
         </i>
@@ -120,8 +120,9 @@
     <li> Collection and detailed <span style="color:#d97b2d">description of tools and databases</span>.</li>
     <li> Concept maps and/or workflows <span style="color:#d97b2d">for integratin the available tools and databases</span>.</li>
     </ul>
-    <br><br>
+    <br>
     For more information about this SB please contact:
+    <br>
     <ul class="text">
     <li>Castrense Savojardo <a href='mailto:castrense.savojardo2@unibo.it'>castrense.savojardo2@unibo.it</a></li>
     <li>Pier Luigi Martelli <a href='mailto:pierluigi.martelli@unibo.it'>pierluigi.martelli@unibo.it</a></li>
