first push sb4rd

--- a/projects.html
+++ b/projects.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="AMP4RD - Service Bundle 1">
-    <meta name="author" content="AMP4RD - Emidio Capriotti">
+    <meta name="description" content="SB4ER - Service Bundle for Epidemic Response">
+    <meta name="author" content="SB4ER">
     <link rel="shortcut icon" href="./favicon.ico" type="image/vnd.microsoft.icon" />
 
-    <title>ELIXIR Service Bundle: AMP4RD</title>
+    <title>SB4ER - Service Bundle for Epidemic Response</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
 	<div class='biofold' >
 	<i>
         </span><span style="color:#1f3751">S</span><span style="color:#d97b2d">ervice</span>
-	</span><span style="color:#1f3751">B</span><span style="color:#d97b2d">undle
+	</span><span style="color:#1f3751">B</span><span style="color:#d97b2d">undle<br>
 	for </span>
 	</span><span style="color:#1f3751">E</span><span style="color:#d97b2d">pidemic</span>
         </span><span style="color:#1f3751">R</span><span style="color:#d97b2d">esponse</span> 
@@ -98,23 +98,23 @@
     we defined the concept maps for 5 possible use scenarios:
     <br><br>
 
-    <b>Map1: Primary analysis of genome sequence: genome assembly, gene prediction and annotation</b><br>
+    <b><span style="color:#d97b2d">Map1: Primary analysis of genome sequence: genome assembly, gene prediction and annotation</span></b><br>
     This map describes the basic steps for genome assembly starting from NGS data, gene prediction and 
     functional/structural annotation of encoded proteins. 
     <br><br>
-    <b>Map2: Multiple Sequence Alignment and Phylogeny</b><br>
+    <b><span style="color:#d97b2d">Map2: Multiple Sequence Alignment and Phylogeny</span></b><br>
     This map organizes tools and resources to perform comparison among genes or genomes and their phylogenetic 
     analysis to reconstruct trees or traceback the evolution of variants. 
     <br><br>
-    <b>Map3: Mutation variant types</b><br>
+    <b><span style="color:#d97b2d">Map3: Mutation variant types</span></b><br>
     This map organizes tools/resources for identification of emerging variations, for variation annotation in 
     terms of type, rate and fitness and for mapping variations on proteins (sequence or structure).
     <br><br>
-    <b>Map4: Assessing antibiotic resistance and virulence from genome sequence</b><br>
+    <b><span style="color:#d97b2d">Map4: Assessing antibiotic resistance and virulence from genome sequence</span></b><br>
     This map organizes tools and resources that allow to highlight specific genes or variations that can be related 
     to important phenotypes, such as antimicrobial resistance and virulence factors.
     <br><br>
-    <b>Map5: Important factors for vaccine design</b><br>
+    <b><span style="color:#d97b2d">Map5: Important factors for vaccine design</span></b><br>
     This map describes tools and resources for protein structure modelling, prediction of exposed proteins, detection 
     epitopes useful for vaccine design.
     <br><br>
