--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="AMP4RD - Service Bundle 1">
-    <meta name="author" content="AMP4RD - Emidio Capriotti">
+    <meta name="description" content="SB4ER - Service Bundle for Epidemic Response">
+    <meta name="author" content="SB4ER">
     <link rel="shortcut icon" href="./favicon.ico" type="image/vnd.microsoft.icon" />
 
-    <title>ELIXIR Service Bundle: AMP4RD</title>
+    <title>Service Bundle for Epidemic Response - SB4ER</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
 	<div class='biofold' >
 	<i>
         </span><span style="color:#1f3751">S</span><span style="color:#d97b2d">ervice</span>
-	</span><span style="color:#1f3751">B</span><span style="color:#d97b2d">undle
+	</span><span style="color:#1f3751">B</span><span style="color:#d97b2d">undle<br>
 	for</span>
 	</span><span style="color:#1f3751">E</span><span style="color:#d97b2d">pidemic</span>
         </span><span style="color:#1f3751">R</span><span style="color:#d97b2d">esponse</span> 
@@ -85,7 +85,7 @@
   	<br>
   	
      <div class="text">
-     <h4 class="title" >ELIXIR Service Bundle for Epidemic Response AMP4RD</h4>
+     <h4 class="title" >ELIXIR Service Bundle for Epidemic Response</h4>
      </div>
 
   <div class="text">     
