--- a/projects.html
+++ b/projects.html
@@ -67,11 +67,11 @@
         <div class="form-inline justify-content-center">
         <nav>
           <ul class="nav nav-pills">
-            <li role="presentation" ><a href="#">Home</a></li>
+            <li role="presentation" ><a href="./index.html">Home</a></li>
 	    <!--
             <li role="presentation" ><a href="./nodes.html">Nodes</a></li>
             -->
-            <li role="presentation" class='active'><a href="./projects.html">Use scenarios</a></li>
+            <li role="presentation" class='active'><a href="#">Use scenarios</a></li>
      	    <!--
 	      <li role="presentation"><a href="./activities.html">Activities</a></li>
 	    -->
