--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
 	<td width="19%">
 	<div class="right_cell">
         <a href="./index.html">
-        <img src="./img/elixir-amp4rd.png" width="150px" align="center">
+        <img src="./img/elixir-sb4er.png" width="150px" align="center">
         </a>
         </div>
 	</td>
