--- a/projects.html
+++ b/projects.html
@@ -98,23 +98,26 @@
     we defined the concept maps for 5 possible use scenarios:
     <br><br>
 
-    <b><span style="color:#d97b2d">Map 1: Primary analysis of genome sequence: genome assembly, gene prediction and annotation</span></b><br>
+    <b><span style="color:#d97b2d"><a href="https://tess.oerc.ox.ac.uk/concept_maps/map_1-primary-analysis-of-genome-sequence-gene-prediction-and-annotation">
+	    Map 1: Primary analysis of genome sequence: genome assembly, gene prediction and annotation</a></span></b><br>
     This map describes the basic steps for genome assembly starting from NGS data, gene prediction and 
     functional/structural annotation of encoded proteins. 
     <br><br>
-    <b><span style="color:#d97b2d">Map 2: Multiple Sequence Alignment and Phylogeny</span></b><br>
+    <b><span style="color:#d97b2d"><a href="https://tess.oerc.ox.ac.uk/concept_maps/map_2-multiple-sequence-alignment-and-phylogeny">
+	    Map 2: Multiple Sequence Alignment and Phylogeny</a></span></b><br>
     This map organizes tools and resources to perform comparison among genes or genomes and their phylogenetic 
     analysis to reconstruct trees or traceback the evolution of variants. 
     <br><br>
-    <b><span style="color:#d97b2d">Map 3: Mutation variant types</span></b><br>
+    <b><span style="color:#d97b2d"><a href="https://tess.oerc.ox.ac.uk/concept_maps/map_3-mutation-variant-types">Map 3: Mutation variant types</a></span></b><br>
     This map organizes tools/resources for identification of emerging variations, for variation annotation in 
     terms of type, rate and fitness and for mapping variations on proteins (sequence or structure).
     <br><br>
-    <b><span style="color:#d97b2d">Map 4: Assessing antibiotic resistance and virulence from genome sequence</span></b><br>
+    <b><span style="color:#d97b2d"><a href="https://tess.oerc.ox.ac.uk/concept_maps/map4-assessing-antibiotic-resistance-and-virulence-from-genome-sequence">
+	    Map 4: Assessing antibiotic resistance and virulence from genome sequence</a></span></b><br>
     This map organizes tools and resources that allow to highlight specific genes or variations that can be related 
     to important phenotypes, such as antimicrobial resistance and virulence factors.
     <br><br>
-    <b><span style="color:#d97b2d">Map 5: Important factors for vaccine design</span></b><br>
+	    <b><span style="color:#d97b2d"><a href="https://tess.oerc.ox.ac.uk/concept_maps/map5-important-factors-for-vaccine-design#">Map 5: Important factors for vaccine design</a></span></b><br>
     This map describes tools and resources for protein structure modelling, prediction of exposed proteins, detection 
     epitopes useful for vaccine design.
     <br><br>
