--- a/index.html
+++ b/index.html
@@ -94,31 +94,30 @@
         <tbody><tr><td valign=top>
     <tr>
     <td valign=top>
-    In the last few decades we have seen the surfacing and spreading of many novel pathogenic viruses. 
-    Some were mutations of the traditional influenza viruses, and some were viruses that crossed the 
-    animal-human divide and became a threat to human lives. An example of the former is the influenza 
-    A (H1N1) virus that caused a pandemic in 2009, while an example of the latter are highly pathogenic 
-    avian influenza A(H7N9), A(H5N1), and A(H5N6), low pathogenic avian influenza A(H7N2), swine influenza A(H1N2)v and A(H3N2).
+    Epidemic spread of new pathogens is quite a frequent event that affects not only humans but also
+animals and plants, and specifically livestock and crops
+In the last few many novel pathogenic viruses have threatened human life. Some were mutations
+of the traditional influenza viruses, and some were viruses that crossed the animal-human divide.
     <br><br>
-    In the above cases, when a novel virus or bacterial strain for which there is no pre-existing immunity
-    or a vaccine is released, there is the possibility of an epidemic or even a pandemic event, as the one 
-    we are experiencing today with COVID-19.
+    In both cases, when a novel virus or bacterial strain for which there is no pre-existing immunity
+or a vaccine is released, there is the possibility of an epidemic or even a pandemic event, as the
+one we are experiencing today with COVID-19.
     <br><br>
 
-    In this context we propose a project to define an ELIXIR Service Bundle for Epidemic Response: a set 
-    of tools and workflows to facilitate and speed up the study of new pathogens, viruses or bacteria. 
-    The final goal of the bundle will be to provide tools to <span style="color:#d97b2d">collect and aggregate 
-    knowledge on new viruses or pathogenic bacteria</span> and their relation to hosts, not necessarily restricted to human-life threatening 
-    pathogens, for example in an epidemic event that threatens livestocks and crops.
+    In this context we defined an ELIXIR Service Bundle for Epidemic Response: a set of tools and workflows to facilitate and speed up the study of new pathogens, viruses or bacteria. The final goal of the bundle is to provide tools and resources to 
+	    <span style="color:#d97b2d">collect and analyse data on new pathogens (bacteria and viruses) and their relation to hosts (humans, animals, plants).</span> 
     <br><br>
-    Our initiative aims to develop a platform for a quick response in case of an outbreak finding 
-    candidates for drug retargeting or finding phenotypes naturally resistant to the infection.
-
-    Possible outcomes are:
-
+   Our initiative aims to provide a platform for facilitating a quick response in case of a new outbreak finding candidates enabling the 
+	    analysis of NGS data, the annotation of the pathogen genomes, the analysis of their phylogeny, the analysis of mutations possibly 
+	    influencing the phenotype. As a follow up, the analysis of markers for antimicrobial resistance and for virulence as well as 
+	    the formulation of hypothesis on molecular targets for vaccine and drug development.
+<br/>
+	    The service bundle is organized into five concept maps collecting more than 140 resources, that are annotated 
+	    with information aiming to guide the user in the selection of the most appropriate tool or data base. 
+    
     <ul class="text">
-    <li> Collection and detailed <span style="color:#d97b2d">description of tools and databases</span>.</li>
-    <li> Concept maps and/or workflows <span style="color:#d97b2d">for integratin the available tools and databases</span>.</li>
+	    <li> <span style="color:#d97b2d"><a href="https://sb4er.github.io/projects.html">Concept maps</a></span></li>
+    <li> <span style="color:#d97b2d"><a href="https://docs.google.com/spreadsheets/d/1g3v5bHrhjf8707PeKwyJa0dPdskDVT1ukoWNe11IRBY/edit?usp=sharing">Description of tools and databases.</a></span></li>
     </ul>
     <br>
     For more information about this SB please contact:
