--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             <li role="presentation" ><a href="./nodes.html">Nodes</a></li>
             -->
             <li role="presentation"><a href="./projects.html">Use scenarios</a></li>
-     	    <!--
-	      <li role="presentation"><a href="./activities.html">Activities</a></li>
-	    -->
+     	    
+	      <li role="presentation"><a href="./contacts.html">Activities</a></li>
+	    
           </ul>
         </nav>
         </div>
