--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             -->
             <li role="presentation"><a href="./projects.html">Use scenarios</a></li>
      	    
-	      <li role="presentation"><a href="./contacts.html">Activities</a></li>
+	      <li role="presentation"><a href="./contact.html">Contacts</a></li>
 	    
           </ul>
         </nav>
