--- a/projects.html
+++ b/projects.html
@@ -72,6 +72,7 @@
             <li role="presentation" ><a href="./nodes.html">Nodes</a></li>
             -->
             <li role="presentation" class='active'><a href="#">Use scenarios</a></li>
+		   <li role="presentation"><a href="./contact.html">Contacts</a></li>
      	    <!--
 	      <li role="presentation"><a href="./activities.html">Activities</a></li>
 	    -->
