--- a/contact.html
+++ b/contact.html
@@ -67,12 +67,12 @@
         <div class="form-inline justify-content-center">
         <nav>
           <ul class="nav nav-pills">
-            <li role="presentation" class='active'><a href="#">Home</a></li>
+            <li role="presentation" ><a href="#">Home</a></li>
 	    <!--
             <li role="presentation" ><a href="./nodes.html">Nodes</a></li>
             -->
             <li role="presentation"><a href="./projects.html">Use scenarios</a></li>
-		   <li role="presentation"><a href="./contact.html">Contacts</a></li>
+		   <li role="presentation" class='active'><a href="./contact.html">Contacts</a></li>
      	    <!--
 	      <li role="presentation"><a href="./activities.html">Activities</a></li>
 	    -->
