--- a/index.html
+++ b/index.html
@@ -95,24 +95,23 @@
     <tr>
     <td valign=top>
     Epidemic spread of new pathogens is quite a frequent event that affects not only humans but also
-animals and plants, and specifically livestock and crops
-In the last few many novel pathogenic viruses have threatened human life. Some were mutations
-of the traditional influenza viruses, and some were viruses that crossed the animal-human divide.
+animals and plants, and specifically livestock and crops. In the last few years, many novel pathogenic viruses have threatened human life. 
+	    Some were mutations of the traditional influenza viruses, and some were viruses that crossed the animal-human divide.
     <br><br>
     In both cases, when a novel virus or bacterial strain for which there is no pre-existing immunity
-or a vaccine is released, there is the possibility of an epidemic or even a pandemic event, as the
+or a vaccine released, there is the possibility of an epidemic or even a pandemic event, as the
 one we are experiencing today with COVID-19.
     <br><br>
-
-    In this context we defined an ELIXIR Service Bundle for Epidemic Response: a set of tools and workflows to facilitate and speed up the study of new pathogens, viruses or bacteria. The final goal of the bundle is to provide tools and resources to 
+    In this context, we defined an ELIXIR Service Bundle for Epidemic Response: a set of tools and workflows to facilitate and speed up the study of 
+	    new pathogens, viruses or bacteria. The final goal of the bundle is to provide tools and resources to 
 	    <span style="color:#d97b2d">collect and analyse data on new pathogens (bacteria and viruses) and their relation to hosts (humans, animals, plants).</span> 
     <br><br>
-   Our initiative aims to provide a platform for facilitating a quick response in case of a new outbreak finding candidates enabling the 
+   Our initiative aims to provide a platform for facilitating a quick response in case of a new outbreak, finding candidate tools/resources enabling the 
 	    analysis of NGS data, the annotation of the pathogen genomes, the analysis of their phylogeny, the analysis of mutations possibly 
 	    influencing the phenotype. As a follow up, the analysis of markers for antimicrobial resistance and for virulence as well as 
 	    the formulation of hypothesis on molecular targets for vaccine and drug development.
 <br/>
-	    The service bundle is organized into five concept maps collecting more than 140 resources, that are annotated 
+	    The service bundle is organized into five concept maps collecting more than 140 resources, which are annotated 
 	    with information aiming to guide the user in the selection of the most appropriate tool or data base. 
     
     <ul class="text">
