--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
 	</td>
 	<td width="19%">
 	<div class="right_cell">
-        <a href="./index.html">
+        <a href="https://elixir-europe.org/">
         <img src="./img/elixir-sb4er.png" width="150px" align="center">
         </a>
         </div>
@@ -107,16 +107,16 @@
     <b><span style="color:#d97b2d"><a href="https://tess.oerc.ox.ac.uk/concept_maps/map_2-multiple-sequence-alignment-and-phylogeny">
 	    Map 2: Multiple Sequence Alignment and Phylogeny</a></span></b><br>
     This map organizes tools and resources to perform comparison among genes or genomes and their phylogenetic 
-    analysis to reconstruct trees or traceback the evolution of variants. 
+    analysis. 
     <br><br>
     <b><span style="color:#d97b2d"><a href="https://tess.oerc.ox.ac.uk/concept_maps/map_3-mutation-variant-types">Map 3: Mutation variant types</a></span></b><br>
     This map organizes tools/resources for identification of emerging variations, for variation annotation in 
     terms of type, rate and fitness and for mapping variations on proteins (sequence or structure).
     <br><br>
     <b><span style="color:#d97b2d"><a href="https://tess.oerc.ox.ac.uk/concept_maps/map4-assessing-antibiotic-resistance-and-virulence-from-genome-sequence">
-	    Map 4: Assessing antibiotic resistance and virulence from genome sequence</a></span></b><br>
+	    Map 4: Assessing antibiotic resistance from genome sequence</a></span></b><br>
     This map organizes tools and resources that allow to highlight specific genes or variations that can be related 
-    to important phenotypes, such as antimicrobial resistance and virulence factors.
+    to important phenotypes such as antimicrobial resistance.
     <br><br>
 	    <b><span style="color:#d97b2d"><a href="https://tess.oerc.ox.ac.uk/concept_maps/map5-important-factors-for-vaccine-design#">Map 5: Important factors for vaccine design</a></span></b><br>
     This map describes tools and resources for protein structure modelling, prediction of exposed proteins, detection 
