--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	</td>
 	<td width="19%">
 	<div class="right_cell">
-        <a href="./index.html">
+        <a href="https://elixir-europe.org/">
         <img src="./img/elixir-sb4er.png" width="150px" align="center">
         </a>
         </div>
