--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 	</td>
 	<td width="19%">
 	<div class="right_cell">
-        <a href="./index.html">
+        <a href="https://elixir-europe.org/">
         <img src="./img/elixir-sb4er.png" width="150px" align="center">
         </a>
         </div>
@@ -67,12 +67,12 @@
         <div class="form-inline justify-content-center">
         <nav>
           <ul class="nav nav-pills">
-            <li role="presentation" ><a href="#">Home</a></li>
+            <li role="presentation" ><a href="./index.html">Home</a></li>
 	    <!--
             <li role="presentation" ><a href="./nodes.html">Nodes</a></li>
             -->
             <li role="presentation"><a href="./projects.html">Use scenarios</a></li>
-		   <li role="presentation" class='active'><a href="./contact.html">Contacts</a></li>
+		   <li role="presentation" class='active'><a href="#">Contacts</a></li>
      	    <!--
 	      <li role="presentation"><a href="./activities.html">Activities</a></li>
 	    -->
